<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context=".MainActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layButton">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textStyle"
                android:id="@+id/heading"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/executive_posykart"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name"
                android:layout_below="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/name"
                android:padding="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:padding="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/mobile_number">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/org"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:padding="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/organization">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textStyle"
                android:layout_below="@+id/user_phone"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/customer_detail"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/org"
                android:padding="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/customer_name">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_name"
                android:padding="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/address"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@+id/org_name">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/contact_no"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_below="@+id/user_address">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/plane"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/plane"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/staring_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/staring_date"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/complementary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/complementary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/other"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/amount"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/registration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:hint="@string/registration"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStyle"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/textStyle"
                android:id="@+id/payment"
                android:padding="10dp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/payment"/>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cash"
                    android:id="@+id/cash"/>
                <RadioButton
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/upi"
                    android:id="@+id/upi"/>
                <RadioButton
                    style="@style/textStyle"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/check"
                    android:id="@+id/check"/>

            </RadioGroup>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:id="@+id/layButton"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal">
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_mail"
        android:textAllCaps="false"
        android:layout_weight="1"
        android:layout_margin="2dp"
        android:id="@+id/send_email"
        app:cornerRadius="15dp"
        app:rippleColor="@android:color/holo_green_dark"
        android:drawableLeft="@drawable/ic_gmail"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:layout_margin="2dp"
        app:cornerRadius="15dp"
        app:rippleColor="@android:color/holo_green_dark"
        android:id="@+id/send_message"
        android:drawableLeft="@drawable/ic_whatsapp"/>


</LinearLayout>


</RelativeLayout>